@@ -1,3 +1,12 @@
+2007-01-25  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* gconf/gconf-client.c: (gconf_client_get_float),
+	(gconf_client_get_int), (gconf_client_get_string),
+	(gconf_client_get_bool), (gconf_client_get_schema),
+	(gconf_client_get_list), (gconf_client_get_pair):
+	Fix up the error handling again. Noticed by Richard Hult.
+	Closes bug #360224 for good.
+
 2007-01-24  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* configure.in: Bump version so we differ from the last released
